# DormMate

./: README.md
3D外壳/3D外壳/: 说明.md
voice/: 语音模块第一代_20260708006.json
voice/uart/: jx_uart_send.c  jx_uart_send.h
前端/: index.html
前端/前端/: index.html
后端/: database.db  insert_fake_data.py  main.py  requirements.txt  view_db.py
后端/data/: dormmate.db
后端/后端/: main.py  requirements.txt  view_db.py
固件/components/DHT11/: CMakeLists.txt  dht11.c
固件/components/HC/: CMakeLists.txt  hc.c  hc.h
固件/components/LED/: CMakeLists.txt  led.c  led.h
固件/components/LIGHT/: CMakeLists.txt  light.c  light.h
固件/components/OLED/: CMakeLists.txt
固件/main/: CMakeLists.txt  app_control.c  app_control.h  app_http.c  app_http.h  app_nvs.c  app_nvs.h  app_oled.c  app_oled.h  app_predict.c  app_predict.h  app_sntp.c  app_sntp.h  app_voice.c  app_voice.h  idf_component.yml  main.c  main.h
固件/固件/: CMakeLists.txt
固件/固件/components/DHT11/: dht11.c  dht11.h
固件/固件/components/LIGHT/: light.c
固件/固件/components/OLED/: oled.c  oled.h
固件/固件/components/PIR/: pir.c  pir.h
固件/固件/components/YUYIN/: voice.c  voice.h
固件/固件/components/zhixinger/: relay_ac.c  relay_ac.h
固件/固件/components/zhixingyi/: led.c  led.h
固件/固件/main/: app_control.c  app_control.h  app_http.c  app_http.h  app_nvs.c  app_nvs.h  app_oled.c  app_oled.h  app_predict.c  app_predict.h  app_sntp.c  app_sntp.h  app_voice.c  app_voice.h  main.c  main.h
文档/: 引脚分配表.md  引脚分配表（按实际修改）.md  数据格式.md  数据格式（新加了设备之类的要在里面进行补充！）.md
文档/文档/: API接口说明.md  技术架构.md
语音/jx_firm/: 语音模块第一代_20260708002.json
语音/jx_firm/uart/: jx_uart_send.c  (+1 more)
